# renovate-poetry-fails-semver

./: README.md  pyproject.toml
.github/: dependabot.yml
