[tool.poetry]
name = "poetry-fails-semver"
version = "0.1.0"
description = ""
authors = ["Malte Swart <msw@kialo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
types-setuptools = "^69.0.0.20240115"
types-pytz = ">= 2023.3.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
